--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <li>Email: <a href="mailto:magtupaanna@gmail.com">magtupaanna@gmail.com</a></li>
         <li>LinkedIn: <a href="https://linkedin.com/_anna magtupa" target="_blank">linkedin.com/_anna magtupa</a></li>
         <li>Phone: 09959177408</li>
-        <li>GitHub: <a href="#">GitHub Profile</a></li>
+        <li>GitHub: <a href="#">annamagtupa</a></li>
       </ul>
     </div>
   </section>
