--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="card">
           <h3>Games Development</h3>
           <p>A fun and interactive browser-based game built from scratch.</p>
-          <a href="#" class="btn">View Project</a>
+          <a href="https://math-quiz-game-seven.vercel.app" class="btn">View Project</a>
         </div>
         <div class="card">
           <h3>Web Development</h3>
