--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="card">
           <h3>Task Management App</h3>
           <p>The fast track to getting things done.</p>
-          <a href="#" class="btn">View Project</a>
+          <a href="https://task-manager-one-gules-54.vercel.app" class="btn">View Project</a>
         </div>
         <div class="card">
           <h3>Games Development</h3>
