--- a/index.html
+++ b/index.html
@@ -94,6 +94,28 @@
               >View Project</a
             >
           </div>
+          <div class="card">
+            <h3>Carmelita Pamado Fresh Catch</h3>
+            <p>A personal website for Carmelita Pamado a fish vendor.</p>
+            <a
+              href="https://jelianmay1643.github.io/CARMELITAPAMADO/"
+              class="btn"
+              target="_blank"
+              rel="noopener noreferrer"
+              >View Project</a
+            >
+          </div>
+          <div class="card">
+            <h3>The Innovator's Footprint</h3>
+            <p>Figma Prototype</p>
+            <a
+              href="https://www.figma.com/deck/ViRUFecAeEvi18skIyMR95/Group-5?node-id=1-303&t=2MBstc3snDvPAmjT-1"
+              class="btn"
+              target="_blank"
+              rel="noopener noreferrer"
+              >View Project</a
+            >
+          </div>
         </div>
       </div>
     </section>
