--- a/index.html
+++ b/index.html
@@ -95,8 +95,56 @@
             >
           </div>
           <div class="card">
-            <h3>Carmelita Pamado Fresh Catch</h3>
-            <p>A personal website for Carmelita Pamado a fish vendor.</p>
+            <h3>The Innovator's Footprint</h3>
+            <p>
+              Members:
+              Magtupa, Anna Mae 
+              Pogoy, Dan Michael
+              Mordedo, Danica
+              Encallado, Rolayco
+              Ursal, Ed James
+              Gullem, Benjie
+              Degamo, Mark
+              Genelosa, Jehiel
+              Albia, Rojien
+              Sumalinog, Justine
+            </p>
+            <a
+              href="https://www.figma.com/deck/ViRUFecAeEvi18skIyMR95/Group-5?node-id=1-303&t=2MBstc3snDvPAmjT-1"
+              class="btn"
+              target="_blank"
+              rel="noopener noreferrer"
+              >View Project</a
+            >
+          </div>
+          <div class="card">
+            <h3>Business Workflow Analysis of Carmelita Pamado</h3>
+            <p>
+              Members:
+              Canillo, Jaina Clouie
+              Degolacion, Shaina
+              Dinglasa, Jelian May L.
+              Magtupa, Anna Mae
+              Pogoy, Angel Rose
+            </p>
+            <a
+              href="https://www.figma.com/proto/C45fKU2VHWJF6vgc7EbEll/PRESENTATION-DECK?node-id=1-8&p=f&t=HBM0ECGOTG5TJohg-1&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A8"
+              class="btn"
+              target="_blank"
+              rel="noopener noreferrer"
+              >View Project</a
+            >
+          </div>
+          <div class="card">
+            <h3>Carmelita Pamado (Live Website)</h3>
+            <p>
+              Members:
+              Canillo, Jaina Clouie
+              Degolacion, Shaina
+              Dinglasa, Jelian May L.
+              Magtupa, Anna Mae
+              Pogoy, Angel Rose
+            </p>
             <a
               href="https://jelianmay1643.github.io/CARMELITAPAMADO/"
               class="btn"
@@ -106,16 +154,24 @@
             >
           </div>
           <div class="card">
-            <h3>The Innovator's Footprint</h3>
-            <p>Figma Prototype</p>
+            <h3>Carmelita Pamado (Figma Prototype)</h3>
+            <p>
+              Members:
+              Canillo, Jaina Clouie
+              Degolacion, Shaina
+              Dinglasa, Jelian May L.
+              Magtupa, Anna Mae
+              Pogoy, Angel Rose
+            </p>
             <a
-              href="https://www.figma.com/deck/ViRUFecAeEvi18skIyMR95/Group-5?node-id=1-303&t=2MBstc3snDvPAmjT-1"
+              href="https://www.figma.com/design/WB2XNMn4OLCNsfAhT5raSA/Untitled?node-id=0-1&t=0q8bNVtvwSmWPot7-1"
               class="btn"
               target="_blank"
               rel="noopener noreferrer"
               >View Project</a
             >
           </div>
+          
         </div>
       </div>
     </section>
